[tool.poetry]
name = "testjob"
version = "0.1.0"
description = "Test job . Positiv and negativ tastcase on testproject.io and pytest or unittest."
authors = ["Fr0sty"]

[tool.poetry.dependencies]
python = "^3.8"
testproject-python-sdk = "^0.63.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
